--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -18,6 +18,14 @@ on:
         default: "cdk"
         required: false
         type: string
+      default-l2-client:
+        description: "name of the l2 cdk client"
+        default: "cdk-op-geth"
+        required: true
+        type: choice
+        options:
+          - cdk-op-geth
+          - cdk-erigon
 
   pull_request:
     branches:
@@ -34,6 +42,7 @@ jobs:
       AGGLAYER_E2E_REF: 88668ea89c273e583e9816e55ee0aa37c22e47d3
       KURTOSIS_CDK_REF: main
       KURTOSIS_ENCLAVE_NAME: cdk
+      DEFAULT_L2_CLIENT: cdk-op-geth
     steps:
       - name: Checkout agglayer-e2e
         uses: actions/checkout@v4
@@ -82,8 +91,18 @@ jobs:
         run: |
           set -eo pipefail
           pushd agglayer-e2e || exit 1
-          set -a
-          source ./tests/.env
-          set +a
+          
+          if [[ "${DEFAULT_L2_CLIENT}" == "cdk-op-geth" ]]; then
+            export L2_RPC_URL=$(kurtosis port print "${KURTOSIS_ENCLAVE_NAME}" op-el-1-op-geth-op-node-001 rpc)
+          elif [[ "${DEFAULT_L2_CLIENT}" == "cdk-erigon" ]]; then
+            export L2_RPC_URL=$(kurtosis port print "${KURTOSIS_ENCLAVE_NAME}" cdk-erigon-rpc-001 rpc)
+          else
+            echo "invalid l2 client detected"
+            exit 1
+          fi
+          
+          export ENCLAVE_NAME="${{ env.KURTOSIS_ENCLAVE_NAME }}"
+          export L2_PRIVATE_KEY="12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+
           bats --filter-tags standard $(find tests -name '*.bats')
           popd
