--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -39,6 +39,7 @@ jobs:
     #   AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
     #   KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
     #   KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
+    #   DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
       AGGLAYER_E2E_REF: 88668ea89c273e583e9816e55ee0aa37c22e47d3
       KURTOSIS_CDK_REF: main
       KURTOSIS_ENCLAVE_NAME: cdk
@@ -102,7 +103,7 @@ jobs:
           fi
           
           export ENCLAVE_NAME="${{ env.KURTOSIS_ENCLAVE_NAME }}"
-          export L2_PRIVATE_KEY="12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+          export L2_PRIVATE_KEY="0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
 
           bats --filter-tags standard $(find tests -name '*.bats')
           popd
