tests: add job to discover standard tag
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -36,20 +36,8 @@ permissions:
   packages: write
 
 jobs:
-  run-standard-battery-tests:
+  discover-standard-tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    strategy:
-      matrix:
-        testfile:
-          - tests/execution/conflicting-contract-calls.bats
-          - tests/execution/conflicting-transactions-to-pool.bats
-          - tests/execution/polycli-cases.bats
-          - tests/execution/railgun-contracts.bats
-          - tests/execution/smooth-crypto-lib.bats
-          - tests/execution/special-addresses.bats
-          - tests/lxly/bridge-tests-suite.bats
-          - tests/polycli-loadtests/polycli-loadtests.bats
     env:
       POLYCLI_VERSION: v0.1.83
     #   AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
@@ -57,6 +45,38 @@ jobs:
     #   KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
     #   DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
       AGGLAYER_E2E_REF: 88668ea89c273e583e9816e55ee0aa37c22e47d3
+      KURTOSIS_CDK_REF: main
+      KURTOSIS_ENCLAVE_NAME: cdk
+      DEFAULT_L2_CLIENT: cdk-op-geth
+    outputs:
+      testfiles: ${{ steps.set-matrix.outputs.testfiles }}
+    steps:
+      - name: Checkout agglayer-e2e
+        uses: actions/checkout@v4
+        with:
+          repository: agglayer/e2e
+          ref: ${{ inputs.agglayer-e2e-ref }}
+          path: agglayer-e2e
+
+      - name: Find standard-tagged bats files
+        id: set-matrix
+        run: |
+          files=$(grep -rl '# bats file_tags=standard' agglayer-e2e/tests | grep '\.bats$' | jq -R -s -c 'split("\n")[:-1]')
+          echo "testfiles=$files" >> $GITHUB_OUTPUT
+
+  run-standard-battery-tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    strategy:
+      matrix:
+        testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
+    env:
+      POLYCLI_VERSION: v0.1.83
+    #   AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+    #   KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
+    #   KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
+    #   DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
+      AGGLAYER_E2E_REF: cd970e6851e7d0539fe1a5a999d5ad21a6497a02
       KURTOSIS_CDK_REF: main
       KURTOSIS_ENCLAVE_NAME: cdk
       DEFAULT_L2_CLIENT: cdk-op-geth
@@ -118,7 +138,6 @@ jobs:
 
       - name: Run e2e tests
         run: |
-          set -eo pipefail
           pushd agglayer-e2e || exit 1
           
           if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
