--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -55,17 +55,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: agglayer/e2e
-          ref: ${{ inputs.agglayer-e2e-ref }}
+          ref: ${{ env.AGGLAYER_E2E_REF }}
           path: agglayer-e2e
 
       - name: Find standard-tagged bats files
         id: set-matrix
         run: |
-          files=$(grep -rl '# bats file_tags=standard' agglayer-e2e/tests | grep '\.bats$' | jq -R -s -c 'split("\n")[:-1]')
-          echo "testfiles=$files" >> $GITHUB_OUTPUT
+            files=$(grep -rl '# bats file_tags=standard' agglayer-e2e/tests | grep '\.bats$' || true)
+            echo "Found files:"
+            echo "$files"
+            # Remove empty lines and ensure valid JSON array without trailing empty string
+            files_json=$(echo "$files" | awk NF | jq -R -s -c 'split("\n") | map(select(length > 0))')
+            echo "Files array:"
+            echo "$files_json"
+            echo "testfiles=$files_json" >> $GITHUB_OUTPUT
 
   run-standard-battery-tests:
     runs-on: ubuntu-latest
+    needs: discover-standard-tests
     timeout-minutes: 60
     strategy:
       matrix:
@@ -88,16 +95,16 @@ jobs:
       - name: Checkout agglayer-e2e
         uses: actions/checkout@v4
         with:
-            repository: agglayer/e2e
-            ref: ${{ env.AGGLAYER_E2E_REF }}
-            path: agglayer-e2e
+          repository: agglayer/e2e
+          ref: ${{ env.AGGLAYER_E2E_REF }}
+          path: agglayer-e2e
 
       - name: Checkout kurtosis-cdk
         uses: actions/checkout@v4
         with:
-            repository: 0xPolygon/kurtosis-cdk
-            ref: ${{ env.KURTOSIS_CDK_REF }}
-            path: kurtosis-cdk
+          repository: 0xPolygon/kurtosis-cdk
+          ref: ${{ env.KURTOSIS_CDK_REF }}
+          path: kurtosis-cdk
 
       - name: Install polycli
         run: |
