--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -26,6 +26,11 @@ on:
         options:
           - cdk-op-geth
           - cdk-erigon
+      funded-private-key:
+        description: "private key with sufficient L1 and L2 funds"
+        default: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+        required: true
+        type: string
 
   pull_request:
     branches:
@@ -39,15 +44,8 @@ jobs:
   discover-standard-tests:
     runs-on: ubuntu-latest
     env:
-      POLYCLI_VERSION: v0.1.83
     #   AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-    #   KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
-    #   KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
-    #   DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
       AGGLAYER_E2E_REF: jihwan/standard-battery-tests
-      KURTOSIS_CDK_REF: main
-      KURTOSIS_ENCLAVE_NAME: cdk
-      DEFAULT_L2_CLIENT: cdk-op-geth
     outputs:
       testfiles: ${{ steps.set-matrix.outputs.testfiles }}
     steps:
@@ -81,15 +79,17 @@ jobs:
       matrix:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
     env:
-      POLYCLI_VERSION: v0.1.83
+      POLYCLI_VERSION: v0.1.84
     #   AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
     #   KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
     #   KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
     #   DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
+    #   FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
       AGGLAYER_E2E_REF: jihwan/standard-battery-tests
       KURTOSIS_CDK_REF: main
       KURTOSIS_ENCLAVE_NAME: cdk
       DEFAULT_L2_CLIENT: cdk-op-geth
+      FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
     steps:
       - name: Debug environment variables
         run: |
@@ -160,7 +160,7 @@ jobs:
           fi
           
           export ENCLAVE_NAME="${{ env.KURTOSIS_ENCLAVE_NAME }}"
-          export L2_PRIVATE_KEY="0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+          export L2_PRIVATE_KEY="${{ env.FUNDED_PRIVATE_KEY }}"
 
           bats --filter-tags standard ${{ matrix.testfile }}
           popd
