--- a/.github/workflows/standard-battery-tests.yml
+++ b/.github/workflows/standard-battery-tests.yml
@@ -32,9 +32,9 @@ on:
         required: true
         type: string
 
-  # pull_request:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -44,8 +44,8 @@ jobs:
   discover-standard-tests:
     runs-on: ubuntu-latest
     env:
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      # AGGLAYER_E2E_REF: jihwan/standard-battery-tests
+      # AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+      AGGLAYER_E2E_REF: jihwan/standard-battery-tests
     outputs:
       testfiles: ${{ steps.set-matrix.outputs.testfiles }}
     steps:
@@ -80,16 +80,16 @@ jobs:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
     env:
       POLYCLI_VERSION: v0.1.84
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
-      KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
-      DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
-      FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
-      # AGGLAYER_E2E_REF: jihwan/standard-battery-tests
-      # KURTOSIS_CDK_REF: main
-      # KURTOSIS_ENCLAVE_NAME: cdk
-      # DEFAULT_L2_CLIENT: cdk-op-geth
-      # FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+      # AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+      # KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
+      # KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
+      # DEFAULT_L2_CLIENT: ${{ inputs.default-l2-client }}
+      # FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
+      AGGLAYER_E2E_REF: jihwan/standard-battery-tests
+      KURTOSIS_CDK_REF: main
+      KURTOSIS_ENCLAVE_NAME: cdk
+      DEFAULT_L2_CLIENT: cdk-op-geth
+      FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
     steps:
       - name: Debug environment variables
         run: |
@@ -132,7 +132,15 @@ jobs:
         run: |
             pushd kurtosis-cdk || exit 1
             sed -i '/^\[ClaimTxManager\]/,/^\[/{s/Enabled = true/Enabled = false/}' templates/bridge-infra/bridge-config.toml
-            kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} .
+            # The default-l2-client value will decided which client will be spun up.
+            if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
+              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} .
+            elif [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-erigon" ]]; then
+              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=./.github/tests/combinations/fork12-cdk-erigon-sovereign.yml .
+            else
+              echo "Invalid L2 client detected: ${{ env.DEFAULT_L2_CLIENT }}. Expected 'cdk-op-geth' or 'cdk-erigon'."
+              exit 1
+            fi
             popd
 
       - name: Inspect Kurtosis enclave
