--- a/.github/workflows/standard-battery-tests-rpc.yml
+++ b/.github/workflows/standard-battery-tests-rpc.yml
@@ -3,20 +3,35 @@ name: Standard Battery Tests - RPC
 on:
   workflow_dispatch:
     inputs:
-      rpc-endpoint:
-        description: "valid rpc endpoint to run the tests on)"
+      agglayer-e2e-ref:
+        description: "agglayer/e2e repo ref (branch, tag, or commit)"
         default: "main"
         required: true
         type: string
-      funded-private-key:
-        description: "private key with sufficient L1 and L2 funds"
-        default: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+      l1-rpc-endpoint:
+        description: "valid l1 rpc endpoint to run the tests on"
+        default: "https://<l1-rpc-endpoint>"
+        required: true
+        type: string
+      l2-rpc-endpoint:
+        description: "valid l2 rpc endpoint to run the tests on"
+        default: "https://<l2-rpc-endpoint>"
+        required: true
+        type: string
+      l1-funded-private-key:
+        description: "private key with sufficient L1 funds"
+        default: "0x<l1-funded-private-key>"
+        required: true
+        type: string
+      l2-funded-private-key:
+        description: "private key with sufficient L2 funds"
+        default: "0x<l2-funded-private-key>"
         required: true
         type: string
 
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
 
 permissions:
   contents: read
@@ -63,19 +78,19 @@ jobs:
     env:
       POLYCLI_VERSION: v0.1.84
       AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
-      KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
-      DEFAULT_L2_CLIENT: ${{ inputs.stack }}
-      FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
+      L1_RPC_ENDPOINT: ${{ inputs.l1-rpc-endpoint }}
+      L2_RPC_ENDPOINT: ${{ inputs.l2-rpc-endpoint }}
+      L1_FUNDED_PRIVATE_KEY: ${{ inputs.l1-funded-private-key }}
+      L2_FUNDED_PRIVATE_KEY: ${{ inputs.l2-funded-private-key }}
       # AGGLAYER_E2E_REF: jihwan/standard-battery-tests
-      # KURTOSIS_CDK_REF: main
-      # KURTOSIS_ENCLAVE_NAME: cdk
-      # DEFAULT_L2_CLIENT: cdk-op-geth
-      # FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+      # L1_RPC_ENDPOINT: ""
+      # L2_RPC_ENDPOINT: ""
+      # L1_FUNDED_PRIVATE_KEY: ""
+      # L2_FUNDED_PRIVATE_KEY: ""
     steps:
       - name: Debug environment variables
         run: |
-          env | grep -E 'AGGLAYER_E2E_REF|KURTOSIS_CDK_REF|KURTOSIS_ENCLAVE_NAME|DEFAULT_L2_CLIENT'
+          env | grep -E 'AGGLAYER_E2E_REF|L1_RPC_ENDPOINT|L2_RPC_ENDPOINT'
 
       - name: Checkout agglayer-e2e
         uses: actions/checkout@v4
@@ -83,13 +98,6 @@ jobs:
           repository: agglayer/e2e
           ref: ${{ env.AGGLAYER_E2E_REF }}
           path: agglayer-e2e
-
-      - name: Checkout kurtosis-cdk
-        uses: actions/checkout@v4
-        with:
-          repository: 0xPolygon/kurtosis-cdk
-          ref: ${{ env.KURTOSIS_CDK_REF }}
-          path: kurtosis-cdk
 
       - name: Install bats
         uses: bats-core/bats-action@3.0.0
@@ -104,30 +112,27 @@ jobs:
             polycli version
             popd
 
-      - name: Install Kurtosis CLI and Foundry
-        uses: ./kurtosis-cdk/.github/actions/kurtosis-pre-run
+      - name: Install jq
+        shell: bash
+        run: |
+          sudo apt update
+          sudo apt install -y jq
+      
+      - name: Install yq
+        shell: bash
+        run: |
+          pip3 install yq
+          yq --version
+  
+      - name: Install foundry
+        uses: foundry-rs/foundry-toolchain@de808b1eea699e761c404bda44ba8f21aba30b2c # v1.3.1
         with:
-          docker_username: ${{ secrets.DOCKER_USERNAME }}
-          docker_token: ${{ secrets.DOCKER_TOKEN }}
+          version: v1.0.0
 
-      - name: Run Kurtosis CDK (bridge claimer disabled)
+      - name: Validate RPC Endpoint
         run: |
-            pushd kurtosis-cdk || exit 1
-            sed -i '/^\[ClaimTxManager\]/,/^\[/{s/Enabled = true/Enabled = false/}' templates/bridge-infra/bridge-config.toml
-            # The stack value will decided which client will be spun up.
-            if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
-              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} .
-            elif [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-erigon" ]]; then
-              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=./.github/tests/combinations/fork12-cdk-erigon-sovereign.yml .
-            else
-              echo "Invalid L2 client detected: ${{ env.DEFAULT_L2_CLIENT }}. Expected 'cdk-op-geth' or 'cdk-erigon'."
-              exit 1
-            fi
-            popd
-
-      - name: Inspect Kurtosis enclave
-        run: |
-          kurtosis enclave inspect ${{ env.KURTOSIS_ENCLAVE_NAME }}
+          cast chain-id --rpc-url ${{ env.L1_RPC_ENDPOINT }}
+          cast chain-id --rpc-url ${{ env.L2_RPC_ENDPOINT }}
 
       - name: Validate test file existence
         run: |
@@ -140,18 +145,12 @@ jobs:
       - name: Run e2e tests
         run: |
           pushd agglayer-e2e || exit 1
-          
-          if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
-            export L2_RPC_URL=$(kurtosis port print "${{ env.KURTOSIS_ENCLAVE_NAME }}" op-el-1-op-geth-op-node-001 rpc)
-          elif [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-erigon" ]]; then
-            export L2_RPC_URL=$(kurtosis port print "${{ env.KURTOSIS_ENCLAVE_NAME }}" cdk-erigon-rpc-001 rpc)
-          else
-            echo "Invalid L2 client detected: ${{ env.DEFAULT_L2_CLIENT }}. Expected 'cdk-op-geth' or 'cdk-erigon'."
-            exit 1
-          fi
-          
-          export ENCLAVE_NAME="${{ env.KURTOSIS_ENCLAVE_NAME }}"
-          export L2_PRIVATE_KEY="${{ env.FUNDED_PRIVATE_KEY }}"
+
+          export L1_RPC_URL="${{ env.L1_RPC_ENDPOINT }}"
+          export L1_PRIVATE_KEY="${{ env.L1_FUNDED_PRIVATE_KEY }}"
+
+          export L2_RPC_URL="${{ env.L2_RPC_ENDPOINT }}"
+          export L2_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
           bats --filter-tags standard ${{ matrix.testfile }}
           popd
