--- a/.github/workflows/standard-battery-tests-kurtosis.yml
+++ b/.github/workflows/standard-battery-tests-kurtosis.yml
@@ -26,15 +26,20 @@ on:
         options:
           - cdk-op-geth
           - cdk-erigon
+      enable-monitored-chaos-stress-tests:
+        description: "enable monitored chaos and stress tests scenario"
+        default: false
+        required: true
+        type: boolean
       funded-private-key:
         description: "private key with sufficient L1 and L2 funds"
         default: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
         required: true
         type: string
 
-  # pull_request:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -44,8 +49,8 @@ jobs:
   discover-standard-tests:
     runs-on: ubuntu-latest
     env:
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      # AGGLAYER_E2E_REF: jihwan/standard-battery-tests
+      # AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+      AGGLAYER_E2E_REF: jihwan/battery-tests-rpc
     outputs:
       testfiles: ${{ steps.set-matrix.outputs.testfiles }}
     steps:
@@ -80,16 +85,16 @@ jobs:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
     env:
       POLYCLI_VERSION: v0.1.84
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
-      KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
-      DEFAULT_L2_CLIENT: ${{ inputs.stack }}
-      FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
-      # AGGLAYER_E2E_REF: jihwan/standard-battery-tests
-      # KURTOSIS_CDK_REF: main
-      # KURTOSIS_ENCLAVE_NAME: cdk
-      # DEFAULT_L2_CLIENT: cdk-op-geth
-      # FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+      # AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+      # KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
+      # KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
+      # DEFAULT_L2_CLIENT: ${{ inputs.stack }}
+      # FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
+      AGGLAYER_E2E_REF: jihwan/battery-tests-rpc
+      KURTOSIS_CDK_REF: main
+      KURTOSIS_ENCLAVE_NAME: cdk
+      DEFAULT_L2_CLIENT: cdk-op-geth
+      FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
     steps:
       - name: Debug environment variables
         run: |
@@ -180,4 +185,133 @@ jobs:
         with:
           name: bridge_test_artifacts
           path: /tmp/bridge_test_results_*
+          retention-days: 1
+
+  run-monitored-chaos-stress-tests:
+    runs-on: ubuntu-latest
+    # if: ${{ inputs.enable-monitored-chaos-stress-tests }}
+    timeout-minutes: 30
+    env:
+      POLYCLI_VERSION: v0.1.84
+      # AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
+      # KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
+      # KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
+      # DEFAULT_L2_CLIENT: ${{ inputs.stack }}
+      # FUNDED_PRIVATE_KEY: ${{ inputs.funded-private-key }}
+      # ENABLE_MONITORED_CHAOS_STRESS_TESTS: ${{ inputs.enable-monitored-chaos-stress-tests }}
+      AGGLAYER_E2E_REF: jihwan/battery-tests-rpc
+      KURTOSIS_CDK_REF: main
+      KURTOSIS_ENCLAVE_NAME: cdk
+      DEFAULT_L2_CLIENT: cdk-op-geth
+      FUNDED_PRIVATE_KEY: "0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625"
+      ENABLE_MONITORED_CHAOS_STRESS_TESTS: true
+    steps:
+      - name: Debug environment variables
+        run: |
+          env | grep -E 'AGGLAYER_E2E_REF|KURTOSIS_CDK_REF|KURTOSIS_ENCLAVE_NAME|DEFAULT_L2_CLIENT'
+
+      - name: Checkout agglayer-e2e
+        uses: actions/checkout@v4
+        with:
+          repository: agglayer/e2e
+          ref: ${{ env.AGGLAYER_E2E_REF }}
+          path: agglayer-e2e
+
+      - name: Checkout kurtosis-cdk
+        uses: actions/checkout@v4
+        with:
+          repository: 0xPolygon/kurtosis-cdk
+          ref: ${{ env.KURTOSIS_CDK_REF }}
+          path: kurtosis-cdk
+
+      - name: Install bats
+        uses: bats-core/bats-action@3.0.0
+
+      - name: Install polycli
+        run: |
+            polycli_version="${{ env.POLYCLI_VERSION }}"
+            pushd $(mktemp -d) || exit 1
+            curl -s -L "https://github.com/0xPolygon/polygon-cli/releases/download/${polycli_version}/polycli_${polycli_version}_linux_amd64.tar.gz" > polycli.tar.gz
+            tar xf polycli.tar.gz
+            mv polycli_* /usr/local/bin/polycli
+            polycli version
+            popd
+
+      - name: Install Kurtosis CLI and Foundry
+        uses: ./kurtosis-cdk/.github/actions/kurtosis-pre-run
+        with:
+          docker_username: ${{ secrets.DOCKER_USERNAME }}
+          docker_token: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Install cgroup-tools
+        run: |
+          sudo apt update -y
+          sudo apt install cgroup-tools
+      
+      - name: Install pumba
+        run: |
+            pushd $(mktemp -d) || exit 1
+            curl -s -L "https://github.com/alexei-led/pumba/releases/download/0.11.6/pumba_linux_amd64" > pumba
+            chmod +x pumba
+            mv pumba /usr/local/bin/pumba
+            pumba --version
+            popd
+
+      - name: Install pict
+        run: |
+          pushd $(mktemp -d) || exit 1
+          curl -s -L "https://github.com/microsoft/pict/archive/refs/tags/v3.7.4.tar.gz" > pict.tar.gz
+          tar xf pict.tar.gz
+          cd pict-3.7.4
+          make pict
+          mv pict /usr/local/bin/pict
+          popd
+
+      - name: Run Kurtosis CDK (bridge claimer disabled)
+        run: |
+            pushd kurtosis-cdk || exit 1
+            sed -i '/^\[ClaimTxManager\]/,/^\[/{s/Enabled = true/Enabled = false/}' templates/bridge-infra/bridge-config.toml
+            # The stack value will decided which client will be spun up.
+            if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
+              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} .
+            elif [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-erigon" ]]; then
+              kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=./.github/tests/combinations/fork12-cdk-erigon-sovereign.yml .
+            else
+              echo "Invalid L2 client detected: ${{ env.DEFAULT_L2_CLIENT }}. Expected 'cdk-op-geth' or 'cdk-erigon'."
+              exit 1
+            fi
+            popd
+
+      - name: Inspect Kurtosis enclave
+        run: |
+          kurtosis enclave inspect ${{ env.KURTOSIS_ENCLAVE_NAME }}
+
+      - name: Run monitored chaos & stress tests
+        run: |
+          pushd agglayer-e2e || exit 1
+
+          if [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-op-geth" ]]; then
+            export L2_RPC_URL=$(kurtosis port print "${{ env.KURTOSIS_ENCLAVE_NAME }}" op-el-1-op-geth-op-node-001 rpc)
+          elif [[ "${{ env.DEFAULT_L2_CLIENT }}" == "cdk-erigon" ]]; then
+            export L2_RPC_URL=$(kurtosis port print "${{ env.KURTOSIS_ENCLAVE_NAME }}" cdk-erigon-rpc-001 rpc)
+          else
+            echo "Invalid L2 client detected: ${{ env.DEFAULT_L2_CLIENT }}. Expected 'cdk-op-geth' or 'cdk-erigon'."
+            exit 1
+          fi
+
+          export ENCLAVE_NAME="${{ env.KURTOSIS_ENCLAVE_NAME }}"
+          
+          pushd ./scenarios/monitored-tests/pre-state
+          bash generate_test_input.bash
+          popd
+
+          bats ./scenarios/monitored-tests/monitored-tests.bats
+          popd
+
+      - name: Upload monitored chaos & stress tests suite artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: monitored_test_artifacts
+          path: agglayer-e2e/scenarios/monitored-tests/post-state
           retention-days: 1
