add new .env file

--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -128,7 +128,7 @@ jobs:
         run: |
           pushd agglayer-e2e || exit 1
           set -a
-          source ./tests/.env
+          source ./tests/aggkit/.env
           set +a
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
           export PROJECT_ROOT="$PWD"
