--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -126,7 +126,7 @@ jobs:
           set -eo pipefail
           pushd agglayer-e2e || exit 1
           set -a
-          source ./tests/.env
+          source ./tests/aggkit/.env
           set +a
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
           export PROJECT_ROOT="$PWD"
