update env file with comments and bats related vars

--- a/tests/aggkit/.env.example
+++ b/tests/aggkit/.env.example
@@ -1,3 +1,8 @@
+# BATS specific variables
+BATS_LIB_PATH="$PWD/core/helpers/lib"
+PROJECT_ROOT="$PWD"
+
+# Network related variables
 L1_RPC_URL=http://localhost:8000
 L2_RPC_URL=http://localhost:8001
 L2_SEQUENCER_RPC_URL=http://localhost:8002
