--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -136,19 +136,20 @@ jobs:
             export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             bats ./tests/aggkit/global-index-pp-old-contracts.bats \
                  || exit 1
+          elif [[ "${{ inputs.test-name }}" == "test-nightly-single-l2-network-fork12-op-succinct" || "${{ inputs.test-name }}" == "test-nightly-single-l2-network-fork12-pessimistic" ]]; then
+            bats ./tests/aggkit/bridge-e2e-nightly.bats \
+                 ./tests/aggkit/internal-claims.bats \
+                 ./tests/aggkit/claim-reetrancy.bats \
+                 || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
           bats ./tests/aggkit/bridge-e2e.bats \
                ./tests/aggkit/e2e-pp.bats \
                ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
-               ./tests/aggkit/internal-claims.bats \
-               ./tests/aggkit/claim-reetrancy.bats \
                  || exit 1
           else
             bats ./tests/aggkit/bridge-e2e.bats \
                  ./tests/aggkit/e2e-pp.bats \
                  ./tests/aggkit/bridge-e2e-custom-gas.bats \
-                 ./tests/aggkit/internal-claims.bats \
-                 ./tests/aggkit/claim-reetrancy.bats \
                  || exit 1
           fi
           popd
