feat: decouple multiple rollups setup

--- a/tests/aggkit/.env.example
+++ b/tests/aggkit/.env.example
@@ -16,3 +16,14 @@ L2_GER_ADDRESS=0x2968D6d736178f8FE7393CC33C87f29D9C287e78
 GAS_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000
 SENDER_PRIVATE_KEY=
 DISABLE_FUNDING=true
+
+# Multiple rollups variables
+L2_RPC_URL_1=http://localhost:8006
+L2_RPC_URL_2=http://localhost:8007
+L2_RPC_URL_3=http://localhost:8008
+AGGKIT_BRIDGE_1_URL=http://localhost:8009
+AGGKIT_BRIDGE_2_URL=http://localhost:8010
+AGGKIT_BRIDGE_3_URL=http://localhost:8011
+GAS_TOKEN_ADDRESS_ROLLUP_1=
+GAS_TOKEN_ADDRESS_ROLLUP_2=
+GAS_TOKEN_ADDRESS_ROLLUP_3=
