--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -53,6 +53,12 @@ on:
         type: string
         default: ""
 
+      event-name:
+        description: "Event name to be used for the test"
+        required: false
+        type: string
+        default: ""
+
 jobs:
   test-single-e2e:
     name: Single chain E2E test
@@ -136,21 +142,30 @@ jobs:
             export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             bats ./tests/aggkit/global-index-pp-old-contracts.bats \
                  || exit 1
-          elif [[ "${{ inputs.test-name }}" == "test-nightly-single-l2-network-fork12-op-succinct" || "${{ inputs.test-name }}" == "test-nightly-single-l2-network-fork12-pessimistic" ]]; then
-            bats ./tests/aggkit/bridge-e2e-nightly.bats \
-                 ./tests/aggkit/internal-claims.bats \
-                 ./tests/aggkit/claim-reetrancy.bats \
-                 || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
-          bats ./tests/aggkit/bridge-e2e.bats \
-               ./tests/aggkit/e2e-pp.bats \
-               ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
+            bats ./tests/aggkit/bridge-e2e.bats \
+                 ./tests/aggkit/e2e-pp.bats \
+                 ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
                  || exit 1
+
+            if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
+              bats ./tests/aggkit/bridge-e2e-nightly.bats \
+                   ./tests/aggkit/internal-claims.bats \
+                   ./tests/aggkit/claim-reetrancy.bats \
+                   || exit 1
+            fi
           else
             bats ./tests/aggkit/bridge-e2e.bats \
                  ./tests/aggkit/e2e-pp.bats \
                  ./tests/aggkit/bridge-e2e-custom-gas.bats \
                  || exit 1
+
+            if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
+              bats ./tests/aggkit/bridge-e2e-nightly.bats \
+                   ./tests/aggkit/internal-claims.bats \
+                   ./tests/aggkit/claim-reetrancy.bats \
+                   || exit 1
+            fi
           fi
           popd
 
