--- a/.github/workflows/standard-battery-tests-rpc.yml
+++ b/.github/workflows/standard-battery-tests-rpc.yml
@@ -126,7 +126,8 @@ jobs:
       - name: Install yq
         shell: bash
         run: |
-          pip3 install yq
+          sudo curl -L -o /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
           yq --version
   
       - name: Install foundry
