--- a/tests/lxly/cardona.env
+++ b/tests/lxly/cardona.env
@@ -4,7 +4,7 @@ L1_RPC_URL="<REDACTED>"
 L2_RPC_URL="<REDACTED>"
 L1_PRIVATE_KEY="<REDACTED>"
 L2_PRIVATE_KEY="<REDACTED>"
-GLOBAL_TIMEOUT="2400s"
+ETH_RPC_TIMEOUT=2400
 
 # Cardona-specific values
 L1_BRIDGE_ADDR="0x528e26b25a34a4A5d0dbDa1d57D318153d2ED582"
