--- a/tests/lxly/example.env
+++ b/tests/lxly/example.env
@@ -8,7 +8,7 @@ L2_PRIVATE_KEY="0x..."
 L1_BRIDGE_ADDR="0x..."
 L2_BRIDGE_ADDR="0x..."
 BRIDGE_SERVICE_URL="https://..."
-GLOBAL_TIMEOUT="2400s"
+ETH_RPC_TIMEOUT=2400
 
 TESTER_CONTRACT_ADDRESS="0x..."
 TEST_ERC20_BUGGY_ADDRESS="0x..."
