Revert "fix: path"
This reverts commit 3d3f610389bca172f70cb0e59af1e11687ff6d1c.

--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -100,7 +100,7 @@ jobs:
           fi
 
       - name: Install Kurtosis CLI and Foundry
-        uses: kurtosis-cdk/.github/actions/kurtosis-pre-run
+        uses: ./kurtosis-cdk/.github/actions/kurtosis-pre-run
         with:
           docker_username: ${{ secrets.DOCKER_USERNAME }}
           docker_token: ${{ secrets.DOCKER_TOKEN }}
