--- a/.github/workflows/cdk-e2e-multi-chains.yml
+++ b/.github/workflows/cdk-e2e-multi-chains.yml
@@ -51,6 +51,11 @@ on:
 env:
   POLYCLI_VERSION: v0.1.84
 
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 jobs:
   test-multi-cdk-e2e:
     name: Multi chains E2E test
