--- a/.github/workflows/standard-battery-tests-rpc.yml
+++ b/.github/workflows/standard-battery-tests-rpc.yml
@@ -134,7 +134,8 @@ jobs:
       - name: Install foundry
         uses: foundry-rs/foundry-toolchain@de808b1eea699e761c404bda44ba8f21aba30b2c # v1.3.1
         with:
-          version: v1.0.0
+          version: v1.0.0 
+          cache: false
 
       - name: Install pem certificate
         shell: bash
